Fix; Add background color to cover text on history page to make it more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,8 @@ main {
     width: 80%;
     margin-left: 10px;
     margin-top: 10px;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.6);
 
 }
 
